--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-<p> hello world !</p>
-	</body>
-</html>
+---
+layout: default
+title: François Deloche - Personal page
+---
+<div class="maindiv">
+	<h1>Hi there, I'm François Deloche</h1>
+	<p>I'm a student from Ecole polytechnique, Paris. Soon, some dev will be added to this page. See you soon !</p>
+</div>
