--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: François Deloche - Personal page
 ---
 <div class="maindiv">
-	<h1>Hi there, I'm François Deloche</h1>
-	<p>I'm a student from Ecole polytechnique, Paris. Soon, some dev will be added to this page. See you soon !</p>
+	<h1>Hi there !<h1> 
+	<p>You're on the page of François Deloche, from Paris. Soon, some dev will be added to this page. See you soon !</p>
 </div>
