--- a/about.html
+++ b/about.html
@@ -4,5 +4,6 @@ title: François Deloche - About me
 ---
 <div class="maindiv">
 <h2>François Deloche</h1>
-<p>I was born in 1992, at Aix-en-Provence (France, 13). I grew up in Paris. I'm now a student from Ecole polytechnique. I'm especially interested in signal processing and statistics.</p>
+<p>I was born in 1992, in Aix-en-Provence (France, 13). I grew up in Paris. <br>
+I'm now a student from Ecole polytechnique. I'm especially interested in signal processing and statistics.</p>
 </div>
