--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: François Deloche - Personal page
 ---
 <div class="maindiv">
+	<p style="float:left"><img scr="/images/photo.jpg"></p>
 	<h1>Hi there !</h1> 
 	<p>You're on the page of François Deloche, from Paris. Soon, some dev will be added to this page. See you soon !</p>
 </div>
