--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: François Deloche - Personal page
 ---
 <div class="maindiv">
 	<h1>Hi there !</h1> 
-	<p>You're on the page of François Deloche, from Paris. Soon, some dev will be added to this page. See you soon !</p>
+	<p>You're on the page of François Deloche, from Paris.<br>Discover <b>QDirWeiGraph</b>, a Qt-based program for drawing Directed Weighted Graphs.</p>
 </div>
