--- a/qdirweigraph.html
+++ b/qdirweigraph.html
@@ -6,7 +6,18 @@ title: QDirWeiGraph
 <h2>QDirWeiGraph</h2>
 <h3>Plot Directed Weighted Graphs</h3>
 <p><b>QDirWeiGraph</b> is a Qt C++ based program able to draw your directed weighted graphs from XML files.
-<br><br>
+<br>
+</p>
+<p align="center"><img src="/Images/qdirwei.png"></p>
+<p>
+Available actions :
+<ul>
+<li>Create/Save/Open graphs with XML format</li>
+<li>Move nodes. Choose nodes labels.</li>
+<li>Use different displays. Solid, dashed or dotted arrows</li>
+<li>Export as .svg</li>
+</ul>
+<br>
 <b>Sources : </b> <a href="https://github.com/fdeloche/qdirweigraph">QDirWeiGraph on <b>GitHub</b></a>
 </p>
 </div>
