--- a/qdirweigraph.html
+++ b/qdirweigraph.html
@@ -12,12 +12,13 @@ title: QDirWeiGraph
 <p>
 Available actions :
 <ul>
-<li>Create/Save/Open graphs with XML format</li>
-<li>Move nodes. Choose nodes labels.</li>
-<li>Use different displays. Solid, dashed or dotted arrows</li>
+<li>Create/Save/Open graphs with XML format. Create and modify arrows</li>
+<li>Move nodes. Choose node labels.</li>
+<li>Set a threshold</li>
 <li>Export as .svg</li>
 </ul>
 <br>
-<b>Sources : </b> <a href="https://github.com/fdeloche/qdirweigraph">QDirWeiGraph on <b>GitHub</b></a>
+<b>Sources : </b> <a href="https://github.com/fdeloche/qdirweigraph">QDirWeiGraph on <b>GitHub</b></a><br>
+<b>Binaries : </b> <a href="https://github.com/fdeloche/qdirweigraph/releases">QDirWeiGraph binaries on <b>GitHub</b></a>
 </p>
 </div>
