--- a/qdirweigraph.html
+++ b/qdirweigraph.html
@@ -89,9 +89,11 @@ Label1 <br>
 
 <H2 id="display">Display</H2>
 
-<p>There exists three different display styles : blue-purple, red-green, black. Set the curve value to min to have a straight graph, put it to maximum to have curvy arrows.</p>
+<p>There exists three different display styles : blue-purple, red-green, black. Set the curve value to min to have a straight graph, put it to maximum to have curvy arrows. You can change the thickness of the graph. Increase the "arrows per node" to have more space around nodes to represent the arrows.</p>
 
 <H2 id="export">Export</H2>
 
 <p>You can export your graph to a svg file. Note that you can modify .svg files with a svg editor (e.g Inkscape) to adapt the graph to your needs. A multi-export is available and it generates a report (.htm/.html) with all the image files.</p>
+
+
 </div>
