--- a/qdirweigraph.html
+++ b/qdirweigraph.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: gallery
 title: QDirWeiGraph
 ---
 <div class="maindiv">
@@ -37,6 +37,7 @@ Available actions :
 </li>
 <li> <a href="#display">Display</a> </li>
 <li> <a href="#export">Export</a> </li>
+<li> <a href="#gallery">Gallery</a> </li>
 </ul>
 <H2 id="format">Graph format</H2>
 
@@ -95,5 +96,47 @@ Label1 <br>
 
 <p>You can export your graph to a svg file. Note that you can modify .svg files with a svg editor (e.g Inkscape) to adapt the graph to your needs. A multi-export is available and it generates a report (.htm/.html) with all the image files.</p>
 
+<H2 id="Gallery">Gallery</H2>
+
+	<div id="gallery">
+		<div id="thumbs">
+			<a href="javascript:changeImage(1, 6);"><img src="QDir/th1.png" alt="" /></a>
+			<a href="javascript:changeImage(2, 6);"><img src="QDir/th2.png" alt="" /></a>
+			<a href="javascript:changeImage(3, 6);"><img src="QDir/th3.png" alt="" /></a>
+			<a href="javascript:changeImage(4, 6);"><img src="QDir/th4.png" alt="" /></a>
+			<a href="javascript:changeImage(5, 6);"><img src="QDir/th5.png" alt="" /></a>
+			<a href="javascript:changeImage(6, 6);"><img src="QDir/th6.png" alt="" /></a>
+		</div>
+
+		<div id="bigimages">
+			<div id="normal1">
+				<img src="QDir/ex1.png" alt=""/>
+			</div>
+
+			<div id="normal2">
+				<img src="QDir/ex2.png" alt=""/>
+			</div>
+
+			<div id="normal3">
+				<img src="QDir/ex3.png" alt=""/>
+			</div>
+
+			<div id="normal4">
+				<img src="QDir/ex4.png" alt=""/>
+			</div>
+
+			<div id="normal5">
+				<img src="QDir/ex5.png" alt=""/>
+			</div>
+
+
+			<div id="normal6">
+				<img src="QDir/ex6.png" alt=""/>
+			</div>
+		</div>
+	</div>
 
 </div>
+
+
+<br style="clear:both">
