--- a/qdirweigraph.html
+++ b/qdirweigraph.html
@@ -7,7 +7,7 @@ title: QDirWeiGraph
 <div class="intro">
 <h2>QDirWeiGraph</h2>
 <h3>Plot Directed Weighted Graphs</h3>
-<p><b>QDirWeiGraph</b> is a Qt C++ based program able to draw your directed weighted graphs from XML files.
+<p><b>QDirWeiGraph</b> is a Qt C++ based program able to draw directed weighted graphs from XML files.
 <br>
 </p>
 <p align="center"><img src="/Images/qdirwei.png"></p>
