--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@ layout: default
 title: François Deloche - Personal page
 ---
 <div class="maindiv">
-	<h1>Hi there !</h1> 
-	<p>You're on the page of François Deloche, from Paris.<br>Discover <b>QDirWeiGraph</b>, a Qt-based program for drawing Directed Weighted Graphs.</p>
+<h2>Welcome</h2>
+
+<h2>On this website</h2>
+<p>- <b>QDirWeiGraph</b> : a Qt-based software (2015) to draw directed graphs with a large number of nodes.
+</p>
+<p style="float:right; margin-left:10px"><img src="/Images/photo.jpg"></p>
+<h2>About me</h2>
+<p>I'm François Deloche, a PhD student from Paris. I've begun my thesis at <a href="http://cams.ehess.fr/">CAMS</a> (Centre d'analyse et de mathématique sociales ), <a href="http://www.ehess.fr/fr">EHESS</a> (Paris) under the direction of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a>.<br> I'm part of the <a href="http://sites.google.com/site/juditgervain/speechcode">project SpeechCODE</a>. We seek to understand how the infants encode the sound for speech detection and recognition. I also work on a project of speech enhancement for auditory protheses.<br>
+I'm a former student of <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">Master MVA</a> (applied mathematics program on statistics, machine learning and signal processing).
+</p>
 </div>
