--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@ title: François Deloche - Personal page
 </p>
 <p style="float:right; margin-left:10px"><img src="/Images/photo.jpg"></p>
 <h2>About me</h2>
-<p>I'm François Deloche, a PhD student from Paris. I've begun my thesis at <a href="http://cams.ehess.fr/">CAMS</a> (Centre d'analyse et de mathématique sociales ), <a href="http://www.ehess.fr/fr">EHESS</a> (Paris) under the direction of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a>.<br> I'm part of the <a href="http://sites.google.com/site/juditgervain/speechcode">project SpeechCODE</a>. We seek to understand how the infants encode the sound for speech detection and recognition. I also work on a project of speech enhancement for auditory protheses.<br>
-I'm a former student of <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">Master MVA</a> (applied mathematics program on statistics, machine learning and signal processing).
+<p>My name is François Deloche. I am a PhD student at the <a href="http://cams.ehess.fr/">CAMS</a> (Centre d'analyse et de mathématique sociales ), <a href="http://www.ehess.fr/fr">EHESS</a> (Paris) under the direction of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a>.<br> I'm part of the <a href="http://sites.google.com/site/juditgervain/speechcode">project SpeechCODE</a>. We seek to understand how the infants encode the sound for speech detection and recognition. I also work on a project of speech enhancement for auditory protheses.<br>
+I'm a former student of the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">master MVA</a> (applied mathematics program on statistics, machine learning and signal processing).
+
+<h3>Teaching</h3>
+<ul>
+<li>Fall 2016 : Teacher assistant, <i><a href='http://www.lri.fr/~paulin/Logique/'>Eléments de logique pour l’informatique</a></i> (L3 - Université Paris-Sud)</li>
+</ul>
 </p>
 </div>
