--- a/CV.html
+++ b/CV.html
@@ -6,7 +6,7 @@ title: François Deloche - CV
 <h2>Curriculum vitae</h2>
 <p>
 <ul>
-<li> <b> 2016 -</b> : PhD candidate in Mathematics & computer science - CAMS, Université PSL<br>Subject : <i>Robust detection of speech</i><br>Under the direction of Jean-Pierre Nadal</li>
+<li> <b> 2016 -</b> : PhD candidate in Mathematics & computer science - <a href="http://cams.ehess.fr">Centre d'analyse et de mathématique sociales</a>, EHESS, Université PSL<br>Subject : <i>Computational models of early tasks in the development of speech</i><br>Under the direction of Jean-Pierre Nadal</li>
 <li> <b> 2015 - 2016</b> : M2 Master MVA (Mathématiques, vision, apprentissage) - Université Paris-Saclay <br> Thesis : <i>Sparse coding of speech</i> </li>
 <li> <b> 2012 -2016</b> : Ingénieur Polytechnicien Program - Ecole polytechnique </li>
 <li> <b> 2010 - 2012</b> : Classes préparatoires (Maths and Physics major) - Lycée Hoche (Versailles) </li>
