--- a/tools.html
+++ b/tools.html
@@ -8,7 +8,7 @@ title: Tools
 Here are some tools which have been useful for research or personnal projects and that I share with you :
 
 <ul>
-  <li> <a href="http://github.com/fdeloche/audacity-timit"> audacity-timit </a>  : An audacity script for displaying the phonetic data of a sentence in the TIMIT database </li>
+  <li> <a href="http://github.com/fdeloche/audacity-timit"> audacity-timit </a>  : An audacity script for displaying the phonetic data of a sentence  from the TIMIT database </li>
     <li><a href="./qdirweigraph.html">QDirWeiGraph</a> : A Qt-based C++ program that helps to create directed weighted graphs.</li>
 </ul>
 <!--
