--- a/teaching.html
+++ b/teaching.html
@@ -6,7 +6,8 @@ title: François Deloche - Teaching
 <p>
 <h2>Teaching</h2>
 <ul>
-<li>Fall 2017 : Practical work supervisor, Cours d'algorithmique avec Python (L2 CPES Université PSL)</li>
+<li>Fall 2017 & Fall 2018 : Practical work supervisor, Cours d'algorithmique avec Python (L2 CPES Université PSL)</li>
+<li>Spring 2018 : Learning support teacher, Mathematics  (L1 CPES1 Université PSL)</li>
 <li>Spring 2017 : Teacher assistant, <i><a href='https://www.lri.fr/~paulin/MathInfo2/'>Mathématiques pour l'informatique 2</a></i> (L2 - Université Paris-Sud)</li>
 <li>Spring 2017 : Practical work supervisor, <i><a href='https://www.lri.fr/~hivert/COURS/Info121/INFO121.html'>Programmation impérative en C++</a></i> (L1 - Université Paris-Sud)</li>
 <li>Fall 2016 : Teacher assistant, <i><a href='http://www.lri.fr/~paulin/Logique/'>Eléments de logique pour l’informatique</a></i> (L3 - Université Paris-Sud)</li>
