--- a/tools.html
+++ b/tools.html
@@ -5,7 +5,7 @@ title: Tools
 ---
 <div class="maindiv">
 
-Here are some tools which have been useful for research or personnal projects and that I share with you :
+Here are some tools, which have been useful for research or personnal projects, that I share with you :
 
 <ul>
   <li> <a href="http://github.com/fdeloche/audacity-timit"> audacity-timit </a>  : An audacity script for displaying the phonetic data of a sentence  from the TIMIT database </li>
