--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: François Deloche - Personal page
 
 <p style="float:right; margin-left:10px"><img src="/Images/photo.jpg"></p>
 <h2>Hello !</h2>
-<p>My name is François Deloche. I am a PhD student at the <a href="http://cams.ehess.fr/">CAMS</a> (Centre d'analyse et de mathématique sociales ), <a href="http://www.ehess.fr/fr">EHESS</a> (Paris) under the direction of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a>.<br> I'm part of the <a href="http://sites.google.com/site/juditgervain/speechcode">SpeechCODE project</a>. We seek to understand how the infants encode the sound for early tasks related to speech (speech detection, recognition of their own language...).<br>
-I'm a former student of the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">master MVA</a> (applied mathematics program on statistics, machine learning and signal processing).
+<p>My name is François Deloche. I am a PhD student at the <a href="http://cams.ehess.fr/">CAMS</a> (Centre d'analyse et de mathématique sociales ), <a href="http://www.ehess.fr/fr">EHESS</a> (Paris) under the direction of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a>.<br> I'm part of the <a href="http://sites.google.com/site/juditgervain/speechcode">SpeechCODE project</a>. We are looking for computational principles underlying neural speech coding.<br>
+I'm a former student of the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">master MVA</a> (applied and computational mathematics program on statistics, machine learning and signal processing).
 </p>
 </div>
