--- a/tools.html
+++ b/tools.html
@@ -5,11 +5,11 @@ title: Tools
 ---
 <div class="maindiv">
 
-Here are some tools, which have been useful for research or personnal projects, that I share with you :
+Here are some tools that have been useful for research or personnal projects:
 
 <ul>
-  <li> <a href="http://github.com/fdeloche/audacity-timit"> audacity-timit </a>  : An audacity script for displaying the phonetic data of a sentence  from the TIMIT database </li>
-    <li><a href="./qdirweigraph.html">QDirWeiGraph</a> : A Qt-based C++ program that helps to create directed weighted graphs.</li>
+  <li> <a href="http://github.com/fdeloche/audacity-timit"> audacity-timit </a>  : An audacity script for displaying the phonetic data of a sentence in the TIMIT database </li>
+    <li><a href="./qdirweigraph.html">QDirWeiGraph</a> : A Qt-based C++ program for the creation of directed weighted graphs.</li>
 </ul>
 <!--
 <h2>Audacity scripts</h2>
