--- a/Publications.html
+++ b/Publications.html
@@ -10,4 +10,16 @@ title: François Deloche - CV
 <li>François Deloche, Fabrizio De Vico Fallani, Stéphanie Allassonniere. Innovation-based sparse estimation of functional connectivity from multivariate autoregressive models. <i>SPIE, Wavelets and Sparsity XVI</i>, Aug 2015, San Diego, United States. <a target="_blank" href="https://dx.doi.org/10.1117/12.2189640">〈10.1117/12.2189640〉</a>. <a target="_blank" href="https://hal.inria.fr/hal-01260223">〈hal-01260223〉</a>  </li>
 </ul>
 </p>
+
+<h2>Others</h2>
+
+<p>
+<b> Talks </b>
+
+<ul>
+<li> <i>The efficient coding hypothesis for the peripheral auditory system.</i> - <a href="https://enseignements-2018.ehess.fr/2018/ue/2331/">Séminaire Neuromathématiques (EHESS)</a>, Collège de France, Paris, April 2019 <a href="/files/04-19-neuromath.pdf">[slides]</a></li>
+<li> <i> The statistical structure of speech - Does the cochlea perform an efficient coding for speech?</i> - GRETSI Summer school, Peyresq, July 2018 </li>
+</ul>
+</p>
 </div>
+
