--- a/teaching.html
+++ b/teaching.html
@@ -6,6 +6,7 @@ title: François Deloche - Teaching
 <p>
 <h2>Teaching</h2>
 <ul>
+<li>Spring 2019 : Practical work supervisor, Cours d'algorithmique avec Python (L1 CPES Université PSL)</li>
 <li>Fall 2017 & Fall 2018 : Practical work supervisor, Cours d'algorithmique avec Python (L2 CPES Université PSL)</li>
 <li>Spring 2018 : Learning support teacher, Mathematics  (L1 CPES1 Université PSL)</li>
 <li>Spring 2017 : Teacher assistant, <i><a href='https://www.lri.fr/~paulin/MathInfo2/'>Mathématiques pour l'informatique 2</a></i> (L2 - Université Paris-Sud)</li>
