--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: François Deloche - Personal page
 <div class="maindiv">
 
 <p style="float:right; margin-left:10px"><img src="/Images/photo.jpg"></p>
-<h2>Hello !</h2>
-<p>My name is François Deloche. I am a PhD student at the <a href="http://cams.ehess.fr/">CAMS</a> (Centre d'analyse et de mathématique sociales ), <a href="http://www.ehess.fr/fr">EHESS</a> (Paris) under the direction of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a>.<br> I'm part of the <a href="http://sites.google.com/site/juditgervain/speechcode">SpeechCODE project</a>. We are looking for computational principles underlying neural speech coding.<br>
-I'm a former student of the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">master MVA</a> (applied and computational mathematics program on statistics, machine learning and signal processing).
+<h3>Personal page (François Deloche)</h3>
+<p><i>About me:</i> I am a PhD student at the <a href="http://cams.ehess.fr/">CAMS</a> (Centre d'analyse et de mathématique sociales ), <a href="http://www.ehess.fr/fr">EHESS</a> (Paris) under the direction of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a>.<br> I work on the <a href="http://sites.google.com/site/juditgervain/speechcode">SpeechCODE project</a>. We are looking for computational principles underlying neural speech coding.<br>
+I'm a former student of the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">MVA master</a> (applied and computational mathematics program on statistics, machine learning and signal processing).
 </p>
 </div>
