--- a/tools.html
+++ b/tools.html
@@ -5,10 +5,10 @@ title: Tools
 ---
 <div class="maindiv">
 
-Here are some tools that have been useful for research or personnal projects:
+Here are some tools that have been useful for research or personal projects:
 
 <ul>
-  <li> <a href="http://github.com/fdeloche/audacity-timit"> audacity-timit </a>  : An audacity script for displaying the phonetic data of a sentence in the TIMIT database </li>
+  <li> <a href="http://github.com/fdeloche/audacity-timit"> audacity-timit </a>  : A script for audacity that displays phonetic data for sentences in the TIMIT database  </li>
     <li><a href="./qdirweigraph.html">QDirWeiGraph</a> : A Qt-based C++ program for the creation of directed weighted graphs.</li>
 </ul>
 <!--
