--- a/CV.html
+++ b/CV.html
@@ -6,10 +6,11 @@ title: François Deloche - CV
 <h2>Curriculum vitae</h2>
 <p>
 <ul>
-<li> <b> 2016 -</b> : PhD candidate in Computational Neuroscience - <a href="http://cams.ehess.fr">Centre d'analyse et de mathématique sociales</a>, EHESS, PSL University<br>Thesis title : <i>Efficient coding of speech</i><br>Under the direction of Jean-Pierre Nadal</li>
-<li> <b> 2015 - 2016</b> : MSc in Applied Mathematics - M2 Master MVA (Mathématiques, vision, apprentissage) - Université Paris-Saclay
-<li> <b> 2012 -2016</b> : Ingénieur Polytechnicien Program - Ecole polytechnique </li>
-<li> <b> 2010 - 2012</b> : Classes préparatoires (Maths and Physics major) - Lycée Hoche (Versailles) </li>
+<li> <b> 2020 - </b>: Postdoctoral fellow, <a href="https://engineering.purdue.edu/auditory/">Auditory Neurophysiology & Modeling Lab</a> - SLHS department, Purdue University, West Lafayette, USA
+<li> <b> 2016 - 2019</b> : PhD candidate in Computational Neuroscience - <a href="http://cams.ehess.fr">Centre d'analyse et de mathématique sociales</a>, EHESS, Paris, France<br>Thesis title : <i>Efficient coding of speech</i><br>Under the direction of Jean-Pierre Nadal</li>
+<li> <b> 2015 - 2016</b> : MSc in Applied Mathematics - M2 Master MVA (Mathématiques, vision, apprentissage) - Université Paris-Saclay, France
+<li> <b> 2012 -2016</b> : Ingénieur Polytechnicien Program - École polytechnique, Palaiseau, France </li>
+<li> <b> 2010 - 2012</b> : Classes préparatoires (Maths and Physics major) - Lycée Hoche, Versailles, France </li>
 </ul>
 </p>
 </div>
