--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: François Deloche - Personal page
 <div class="maindiv">
 
 <!--<p style="float:right; margin-left:10px"><img src="/Images/photo.jpg"></p>-->
-<h3>Personal page (François Deloche)</h3>
-<p><i>About me:</i> I am a postdoctoral fellow of the <a href="https://www.fondationpourlaudition.org">Fondation pour l'Audition</a> working in the <a href="https://engineering.purdue.edu/auditory/">Auditory Neurophysiology & Modeling Lab</a> at Purdue University. I completed my PhD in computational neuroscience in 2019, under the supervision of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a> (<a href="http://cams.ehess.fr/">CAMS</a> - EHESS, Paris).<br> I worked on the <a href="http://sites.google.com/site/juditgervain/speechcode">SpeechCODE project</a>, looking for computational principles underlying neural speech coding.<br>
+<h3>François Deloche - Personal page</h3>
+<p><i>About me:</i> I am a postdoctoral fellow with a grant from the <a href="https://www.fondationpourlaudition.org">Fondation pour l'Audition</a> working in the <a href="https://engineering.purdue.edu/auditory/">Auditory Neurophysiology & Modeling Lab</a> at Purdue University. I completed my PhD in computational neuroscience in 2019, under the supervision of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a> (<a href="http://cams.ehess.fr/">CAMS</a> - EHESS, Paris).<br> I worked on the <a href="http://sites.google.com/site/juditgervain/speechcode">SpeechCODE project</a>, looking for computational principles underlying neural speech coding.<br>
 I'm also a former student of the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">MVA master</a> (applied and computational mathematics program on statistics, machine learning and signal processing).
 </p>
 </div>
