--- a/Publications.html
+++ b/Publications.html
@@ -6,8 +6,12 @@ title: François Deloche - CV
 <h2>Publications</h2>
 <p>
 <ul>
-<li>François Deloche. Fine-grained statistical structure of speech. <i>PLOS One</i>, 2020. <a target="_blank" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0230233">〈10.1371/journal.pone.0230233〉</a> </li>
-<li>François Deloche, Fabrizio De Vico Fallani, Stéphanie Allassonniere. Innovation-based sparse estimation of functional connectivity from multivariate autoregressive models. <i>SPIE, Wavelets and Sparsity XVI</i>, Aug 2015, San Diego, United States. <a target="_blank" href="https://dx.doi.org/10.1117/12.2189640">〈10.1117/12.2189640〉</a>. <a target="_blank" href="https://hal.inria.fr/hal-01260223">〈hal-01260223〉</a>  </li>
+<li>François Deloche. Fine-grained statistical structure of speech. <i>PLOS One</i>, 2020. <a target="_blank" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0230233">〈10.1371/journal.pone.0230233〉</a> <a target="_blank" href="https://hal.archives-ouvertes.fr/hal-01931420">〈hal-01931420〉</a>
+<ul>
+<li> <small><a href='https://journals.plos.org/plosone/article/comment?id=10.1371/annotation/27e13960-0076-457d-a76d-581f3483b365'><i>Note on rendering issues for a few phonetic notations in the PlosOne version.</i></a></small>
+</ul>
+</li>
+<li>François Deloche, Fabrizio De Vico Fallani, Stéphanie Allassonniere. Innovation-based sparse estimation of functional connectivity from multivariate autoregressive models. <i>SPIE, Wavelets and Sparsity XVI</i>, Aug 2015, San Diego, United States. <a target="_blank" href="https://dx.doi.org/10.1117/12.2189640">〈10.1117/12.2189640〉</a> <a target="_blank" href="https://hal.inria.fr/hal-01260223">〈hal-01260223〉</a>  </li>
 </ul>
 </p>
 
