+ thesis, + some updates

--- a/Publications.html
+++ b/Publications.html
@@ -15,6 +15,10 @@ title: François Deloche - CV
 </ul>
 </p>
 
+<p>
+Thesis (pdf): <i>Short-time scale efficient coding of speech</i>  (<a href='http://www.theses.fr/2019EHES0142'>info on <i>theses.fr</i></a>) (<a href='/files/thesis.pdf'>pdf</a>).
+</p>
+
 <h2>Others</h2>
 
 <p>
@@ -26,6 +30,24 @@ congruent with nonlinear cochlear filtering</i>, <a href="https://www.isaar.eu/"
 <li> <i>The efficient coding hypothesis for the peripheral auditory system.</i> - <a href="https://enseignements-2018.ehess.fr/2018/ue/2331/">Séminaire Neuromathématiques (EHESS)</a>, Collège de France, Paris, April 2019 <a href="/files/04-19-neuromath.pdf">[slides]</a></li>
 <li> <i> The statistical structure of speech - Does the cochlea perform an efficient coding for speech?</i> - GRETSI Summer school, Peyresq, July 2018 </li>
 </ul>
+</p>
+
+
+
+
+<p>
+<b> Posters </b>
+
+
+<ul>
+
+<li> <i>Estimation of cochlear excitation patterns using a model of forward-masked Compound Action Potentials</i> - 44th MidWinter Meeting of the  Association for Research in Otolaryngology (ARO), Virtual, January 2021 </li>
+
+<li> <i>
+The fine-grained statistical structure of speech is congruent with nonlinear peripheral auditory processing</i>,  <a target="_blank" href="https://doi.org/10.1121/1.5101317">〈10.1121/1.5101317〉</a> 177th meeting of the Acoustical Society of America (ASA), Louisville, USA, May 2019 </li>
+
+</ul>
+
 </p>
 </div>
 
