--- a/Publications.html
+++ b/Publications.html
@@ -16,7 +16,7 @@ title: François Deloche - CV
 </p>
 
 <p>
-Thesis (pdf): <i>Short-time scale efficient coding of speech</i>  (<a href='http://www.theses.fr/2019EHES0142'>info on <i>theses.fr</i></a>) (<a href='/files/thesis.pdf'>pdf</a>).
+Thesis: <i>Short-time scale efficient coding of speech</i>  (<a href='http://www.theses.fr/2019EHES0142'>info on <i>theses.fr</i></a>) (<a href='/files/thesis.pdf'>pdf</a>).
 </p>
 
 <h2>Others</h2>
