--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: François Deloche - Personal page
 <!--<p style="float:right; margin-left:10px"><img src="/Images/photo.jpg"></p>-->
 <h3>François Deloche - Personal page</h3>
 <p><i>About me:</i> I am a postdoctoral fellow working in the <a href="https://engineering.purdue.edu/auditory/">Auditory Neurophysiology & Modeling Lab</a> at Purdue University. My current research project is on investigating properties of the inner ear (including cochlear frequency selectivity) using electrocochleography and forward-masking. </br>More broadly, my interests are in: computational neuroscience (study of sensory systems), computational models of
-the peripheral auditory system, non-linear cochlear signal processing. I have also a 'side' project on the modeling of speech rhythm perception (more coming soon!).
+the peripheral auditory system, non-linear cochlear signal processing. I have also a 'side' project on the modeling of speech rhythm perception with deep neural networks (more coming soon!).
 
 <br><br>
 I completed my PhD in computational neuroscience in 2019, under the supervision of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a> (<a href="http://cams.ehess.fr/">CAMS</a> - EHESS, Paris).<br> I worked on the <a href="http://sites.google.com/site/juditgervain/speechcode">SpeechCODE project</a>, looking for computational principles underlying neural speech coding.<br>
