--- a/CV.html
+++ b/CV.html
@@ -6,11 +6,26 @@ title: François Deloche - CV
 <h2>Curriculum vitae</h2>
 <p>
 <ul>
-<li> <b> 2020 - </b>: Postdoctoral fellow, <a href="https://engineering.purdue.edu/auditory/">Auditory Neurophysiology & Modeling Lab</a> - SLHS department, Purdue University, West Lafayette, USA<br>Grant from <a href="https://www.fondationpourlaudition.org">Fondation pour l'Audition</a> (2020/2021)
+<li> <b> 2022 - </b>: Postdoctoral researcher, <a href='https://www.waves.intec.ugent.be/hearing-technology'>Hearing Technology 
+Lab</a> - Dept. of Information Technology, Ghent University, Belgium</li>
+<li> <b> 2020 - 2022 </b>: Postdoctoral fellow, <a href="https://engineering.purdue.edu/auditory/">Auditory Neurophysiology & Modeling Lab</a> - SLHS, Purdue University, West Lafayette IN, USA<br>Grant from <a href="https://www.fondationpourlaudition.org">Fondation pour l'Audition</a> (2020/2021)
 <li> <b> 2016 - 2019</b> : PhD candidate in Computational Neuroscience - <a href="http://cams.ehess.fr">Centre d'analyse et de mathématique sociales</a>, EHESS, Paris, France<br>Thesis title : <i>Efficient coding of speech</i><br>Under the direction of Jean-Pierre Nadal</li>
 <li> <b> 2015 - 2016</b> : MSc in Applied Mathematics - M2 Master MVA (Mathématiques, vision, apprentissage) - Université Paris-Saclay, France
 <li> <b> 2012 -2016</b> : Ingénieur Polytechnicien Program - École polytechnique, Palaiseau, France </li>
 <li> <b> 2010 - 2012</b> : Classes préparatoires (Maths and Physics major) - Lycée Hoche, Versailles, France </li>
 </ul>
 </p>
+
+<p>
+<h2>Teaching</h2>
+<ul>
+<li>Spring 2019 : Practical work supervisor, Cours d'algorithmique avec Python (L1 CPES Université PSL)</li>
+<li>Fall 2017 & Fall 2018 : Practical work supervisor, Cours d'algorithmique avec Python (L2 CPES Université PSL)</li>
+<li>Spring 2018 : Learning support teacher, Mathematics  (L1 CPES1 Université PSL)</li>
+<li>Spring 2017 : Teacher assistant, <i><a href='https://www.lri.fr/~paulin/MathInfo2/'>Mathématiques pour l'informatique 2</a></i> (L2 - Université Paris-Sud)</li>
+<li>Spring 2017 : Practical work supervisor, <i><a href='https://www.lri.fr/~hivert/COURS/Info121/INFO121.html'>Programmation impérative en C++</a></i> (L1 - Université Paris-Sud)</li>
+<li>Fall 2016 : Teacher assistant, <i><a href='http://www.lri.fr/~paulin/Logique/'>Eléments de logique pour l’informatique</a></i> (L3 - Université Paris-Sud)</li>
+</ul>
+</p>
+
 </div>
