--- a/Publications.html
+++ b/Publications.html
@@ -6,12 +6,16 @@ title: François Deloche - CV
 <h2>Publications</h2>
 <p>
 <ul>
-<li>François Deloche. Fine-grained statistical structure of speech. <i>PLOS One</i>, 2020. <a target="_blank" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0230233">〈10.1371/journal.pone.0230233〉</a> <a target="_blank" href="https://hal.archives-ouvertes.fr/hal-01931420">〈hal-01931420〉</a>
+<li> F. Deloche, S. Parida, A. Sivaprakasam, M.G. Heinz. Estimation of cochlear frequency selectivity using a convolution model of forward-masked compound action potentials, 2023. <i>Journal of the Association for Research in Otolaryngology</i>. (<a href='/files/fmaskedCAP_postprint.pdf'>post-print</a>)
+<!-- Pre-print (not peer-reviewed) available on bioarxiv: <a href='https://www.biorxiv.org/content/10.1101/2022.04.15.487700v1'>10.1101/2022.04.15.487700</a> -->
+</li>
+
+<li>F. Deloche. Fine-grained statistical structure of speech. <i>PLOS One</i>, 2020. <a target="_blank" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0230233">〈10.1371/journal.pone.0230233〉</a> <a target="_blank" href="https://hal.archives-ouvertes.fr/hal-01931420">〈hal-01931420〉</a>
 <ul>
 <li> <small><a href='https://journals.plos.org/plosone/article/comment?id=10.1371/annotation/27e13960-0076-457d-a76d-581f3483b365'><i>Note on rendering issues for a few phonetic notations in the PlosOne version.</i></a></small>
 </ul>
 </li>
-<li>François Deloche, Fabrizio De Vico Fallani, Stéphanie Allassonniere. Innovation-based sparse estimation of functional connectivity from multivariate autoregressive models. <i>SPIE, Wavelets and Sparsity XVI</i>, Aug 2015, San Diego, United States. <a target="_blank" href="https://dx.doi.org/10.1117/12.2189640">〈10.1117/12.2189640〉</a> <a target="_blank" href="https://hal.inria.fr/hal-01260223">〈hal-01260223〉</a>  </li>
+<li>F. Deloche, Fabrizio De Vico Fallani, Stéphanie Allassonniere. Innovation-based sparse estimation of functional connectivity from multivariate autoregressive models. <i>SPIE, Wavelets and Sparsity XVI</i>, Aug 2015, San Diego, United States. <a target="_blank" href="https://dx.doi.org/10.1117/12.2189640">〈10.1117/12.2189640〉</a> <a target="_blank" href="https://hal.inria.fr/hal-01260223">〈hal-01260223〉</a>  </li>
 </ul>
 </p>
 
@@ -25,10 +29,17 @@ Thesis: <i>Short-time scale efficient coding of speech</i>  (<a href='http://www
 <b> Talks </b>
 
 <ul>
+<li> <i>Characterization of cochlear compressive nonlinearities
+using forward-masked compound action potentials</i>, 19th International Symposium on Hearing
+(ISH), Lyon, France, June 2022.
+ </li>
+<li> <i>Estimation of Cochlear Frequency Selectivity
+Using a Convolution Model of Forward-Masked Compound Action Potentials</i>, 45th Midwinter
+meeting of Association for Research in Otolaryngology (ARO), San José, USA, February 2022 </li>
 <li> <i>The fine-grained statistical structure of speech may be
 congruent with nonlinear cochlear filtering</i>, <a href="https://www.isaar.eu/">ISAAR 2019</a>, Nyborg, Denmark, August 2019 </li>
 <li> <i>The efficient coding hypothesis for the peripheral auditory system.</i> - <a href="https://enseignements-2018.ehess.fr/2018/ue/2331/">Séminaire Neuromathématiques (EHESS)</a>, Collège de France, Paris, April 2019 <a href="/files/04-19-neuromath.pdf">[slides]</a></li>
-<li> <i> The statistical structure of speech - Does the cochlea perform an efficient coding for speech?</i> - GRETSI Summer school, Peyresq, July 2018 </li>
+<!-- <li> <i> The statistical structure of speech - Does the cochlea perform an efficient coding for speech?</i> - GRETSI Summer school, Peyresq, July 2018 </li> -->
 </ul>
 </p>
 
@@ -41,7 +52,17 @@ congruent with nonlinear cochlear filtering</i>, <a href="https://www.isaar.eu/"
 
 <ul>
 
-<li> <i>Estimation of cochlear excitation patterns using a model of forward-masked Compound Action Potentials</i> - 44th MidWinter Meeting of the  Association for Research in Otolaryngology (ARO), Virtual, January 2021 </li>
+
+<li> <i>Effect of Suppressive Masking on the Dynamic Range of Auditory-Nerve Responses : Characterization With Forward-Masked Compound Action Potentials</i>, (with A. Sivaprakasam, M.G.
+Heinz) - 46th MidWinter Meeting of the Association for Research in Otolaryngology (ARO), Or-
+lando (USA), February 2023 </li>
+
+<li> <i> A computational model of the gerbil auditory periphery for studies of sensorineural hearing impairment </i> (with S. Keshishzadeh, D. Kiselev, A. Diuba, S. Kujawa, JL Puel, J. Bourien,
+S. Verhulst) - 46th MidWinter Meeting of the Association for Research in Otolaryngology (ARO),
+Orlando (USA), February 2023 </li>
+
+<li> <i>Estimation of cochlear excitation patterns using a model of forward-masked Compound Action Potentials</i> (with S. Parida, M.G.
+Heinz) - 44th MidWinter Meeting of the  Association for Research in Otolaryngology (ARO), Virtual, January 2021 </li>
 
 <li> <i>
 The fine-grained statistical structure of speech is congruent with nonlinear peripheral auditory processing</i>,  <a target="_blank" href="https://doi.org/10.1121/1.5101317">〈10.1121/1.5101317〉</a> 177th meeting of the Acoustical Society of America (ASA), Louisville, USA, May 2019 </li>
