--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@ title: François Deloche - Personal page
 
 <!--<p style="float:right; margin-left:10px"><img src="/Images/photo.jpg"></p>-->
 <h3>François Deloche - Personal page</h3>
-<p><i>About me:</i> I am a postdoctoral fellow working in the <a href="https://engineering.purdue.edu/auditory/">Auditory Neurophysiology & Modeling Lab</a> at Purdue University. My current research project is on investigating properties of the inner ear (including cochlear frequency selectivity) using electrocochleography and forward-masking. </br>More broadly, my interests are in: computational neuroscience (study of sensory systems), computational models of
-the peripheral auditory system, non-linear cochlear signal processing. I have also a 'side' project on the modeling of speech rhythm perception with deep neural networks (more coming soon!).
 
-<br><br>
-I completed my PhD in computational neuroscience in 2019, under the supervision of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a> (<a href="http://cams.ehess.fr/">CAMS</a> - EHESS, Paris).<br> I worked on the <a href="http://sites.google.com/site/juditgervain/speechcode">SpeechCODE project</a>, looking for computational principles underlying neural speech coding.<br>
-I'm also a former student of the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">MVA master</a> (applied and computational mathematics program on statistics, machine learning and signal processing).
+<p><i>About me:</i> I am a postdoctoral researcher and member of the <a href='https://www.waves.intec.ugent.be/hearing-technology'>Hearing Technology 
+Lab</a> at Ghent University. I am currently working on transmission-line models to describe functional aspects of cochlear mechanics and the auditory periphery. My (broad) research interests are in: computational neuroscience (study of sensory systems), computational models of
+the peripheral auditory system, non-linear cochlear signal processing, auditory neurophysiology (in particular: the auditory nerve compound action potential). I also conducted a research project on the modeling of speech rhythm perception using deep neural networks.
+
+<br>
+<br>
+<i>Past me:</i> 
+
+Between 2020 and 2022, I was a postdoctoral fellow in the <a href="https://engineering.purdue.edu/auditory/">Auditory Neurophysiology & Modeling Lab</a> at Purdue University. I completed my PhD in computational neuroscience in 2019, under the supervision of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a> (<a href="http://cams.ehess.fr/">CAMS</a> - EHESS, Paris). I am a former student of the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">MVA master</a> (applied and computational mathematics program on statistics, machine learning and signal processing).
 </p>
 </div>
