--- a/Publications.html
+++ b/Publications.html
@@ -5,8 +5,10 @@ title: François Deloche - CV
 <div class="maindiv">
 <h2>Publications</h2>
 <p>
+Pre-print: F. Deloche, L. Bonnasse-Gahot, J.Gervain. Acoustic characterization of speech rhythm: going
+beyond metrics with recurrent neural networks (2024). <a target="_blank" href="https://doi.org/10.48550/arXiv.2401.14416">〈arXiv:2401.14416〉</a> 
 <ul>
-<li> F. Deloche, S. Parida, A. Sivaprakasam, M.G. Heinz. Estimation of cochlear frequency selectivity using a convolution model of forward-masked compound action potentials, 2023. <i>Journal of the Association for Research in Otolaryngology</i>. (<a href='/files/fmaskedCAP_postprint.pdf'>post-print</a>)
+<li> F. Deloche, S. Parida, A. Sivaprakasam, M.G. Heinz. Estimation of cochlear frequency selectivity using a convolution model of forward-masked compound action potentials, 2024. <i>Journal of the Association for Research in Otolaryngology</i>.  <a target="_blank" href="https://doi.org/10.1007/s10162-023-00922-1">〈10.1007/s10162-023-00922-1〉</a>   (<a href='https://rdcu.be/dw2cj'>view-only</a>; <a href='/files/fmaskedCAP_postprint.pdf'>post-print</a>)
 <!-- Pre-print (not peer-reviewed) available on bioarxiv: <a href='https://www.biorxiv.org/content/10.1101/2022.04.15.487700v1'>10.1101/2022.04.15.487700</a> -->
 </li>
 
@@ -54,8 +56,7 @@ congruent with nonlinear cochlear filtering</i>, <a href="https://www.isaar.eu/"
 
 
 <li> <i>Effect of Suppressive Masking on the Dynamic Range of Auditory-Nerve Responses : Characterization With Forward-Masked Compound Action Potentials</i>, (with A. Sivaprakasam, M.G.
-Heinz) - 46th MidWinter Meeting of the Association for Research in Otolaryngology (ARO), Or-
-lando (USA), February 2023 </li>
+Heinz) - 46th MidWinter Meeting of the Association for Research in Otolaryngology (ARO), Orlando (USA), February 2023 </li>
 
 <li> <i> A computational model of the gerbil auditory periphery for studies of sensorineural hearing impairment </i> (with S. Keshishzadeh, D. Kiselev, A. Diuba, S. Kujawa, JL Puel, J. Bourien,
 S. Verhulst) - 46th MidWinter Meeting of the Association for Research in Otolaryngology (ARO),
