--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: François Deloche - Personal page
 <h3>François Deloche - Personal page</h3>
 
 <p><i>About me:</i> I am a postdoctoral researcher and member of the <a href='https://www.waves.intec.ugent.be/hearing-technology'>Hearing Technology 
-Lab</a> at Ghent University. I am currently working on transmission-line models to describe functional aspects of cochlear mechanics and the auditory periphery. My (broad) research interests are in: computational neuroscience (study of sensory systems), computational models of
+Lab</a> at Ghent University. My research work is centered around computational modeling of the cochlea and the auditory periphery, with a current focus on transmission-line models. My (broad) research interests are in: computational neuroscience (study of sensory systems), computational models of
 the peripheral auditory system, non-linear cochlear signal processing, auditory neurophysiology (in particular: the auditory nerve compound action potential). I also conducted a research project on the modeling of speech rhythm perception using deep neural networks.
 
 <br>
