--- a/Publications.html
+++ b/Publications.html
@@ -3,11 +3,13 @@ layout: default
 title: François Deloche - CV
 ---
 <div class="maindiv">
-<h2>Publications</h2>
-<p>
-Pre-print: F. Deloche, L. Bonnasse-Gahot, J.Gervain. Acoustic characterization of speech rhythm: going
-beyond metrics with recurrent neural networks (2024). <a target="_blank" href="https://doi.org/10.48550/arXiv.2401.14416">〈arXiv:2401.14416〉</a> 
+<h2>Journal papers</h2>
+
 <ul>
+
+<li>Pre-print: F. Deloche, L. Bonnasse-Gahot, J.Gervain. Acoustic characterization of speech rhythm: going
+beyond metrics with recurrent neural networks (2024). <a target="_blank" href="https://doi.org/10.48550/arXiv.2401.14416">〈arXiv:2401.14416〉</a> </li>
+ 
 <li> F. Deloche, S. Parida, A. Sivaprakasam, M.G. Heinz. Estimation of cochlear frequency selectivity using a convolution model of forward-masked compound action potentials, 2024. <i>Journal of the Association for Research in Otolaryngology</i>.  <a target="_blank" href="https://doi.org/10.1007/s10162-023-00922-1">〈10.1007/s10162-023-00922-1〉</a>   (<a href='https://rdcu.be/dw2cj'>view-only</a>; <a href='/files/fmaskedCAP_postprint.pdf'>post-print</a>)
 <!-- Pre-print (not peer-reviewed) available on bioarxiv: <a href='https://www.biorxiv.org/content/10.1101/2022.04.15.487700v1'>10.1101/2022.04.15.487700</a> -->
 </li>
@@ -15,16 +17,34 @@ beyond metrics with recurrent neural networks (2024). <a target="_blank" href="h
 <li>F. Deloche. Fine-grained statistical structure of speech. <i>PLOS One</i>, 2020. <a target="_blank" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0230233">〈10.1371/journal.pone.0230233〉</a> <a target="_blank" href="https://hal.archives-ouvertes.fr/hal-01931420">〈hal-01931420〉</a>
 <ul>
 <li> <small><a href='https://journals.plos.org/plosone/article/comment?id=10.1371/annotation/27e13960-0076-457d-a76d-581f3483b365'><i>Note on rendering issues for a few phonetic notations in the PlosOne version.</i></a></small>
-</ul>
 </li>
-<li>F. Deloche, Fabrizio De Vico Fallani, Stéphanie Allassonniere. Innovation-based sparse estimation of functional connectivity from multivariate autoregressive models. <i>SPIE, Wavelets and Sparsity XVI</i>, Aug 2015, San Diego, United States. <a target="_blank" href="https://dx.doi.org/10.1117/12.2189640">〈10.1117/12.2189640〉</a> <a target="_blank" href="https://hal.inria.fr/hal-01260223">〈hal-01260223〉</a>  </li>
+</ul>
+
+</li>
+</ul>
+
+<h2>Proceedings</h2>
+
+<ul>
+
+
+<li>F. Deloche, M. Thienpont, A. Moleti, R. Sisto, S. Verhulst. Active control of transverse viscoelastic damping in the tectorial membrane: a second role for outer hair cells? <i>Mechanics of Hearing Workshop 2024 (MoH 2024)</i>, Ann Arbor, Michigan, USA. <a target="_blank" href="https://doi.org/10.5281/zenodo.11210647">〈10.5281/zenodo.11210647〉</a> </li>
+
+<li>F. Deloche, A. Sivaprakasam, M.G. Heinz. Characterization of cochlear compressive nonlinearities using forward-masked compound action potentials. <i>19th International Symposium on Hearing (ISH)</i>, Lyon, France, June 2022. <a target="_blank" href="https://doi.org/10.5281/zenodo.12622698">〈10.5281/zenodo.12622698〉</a> </li>
+
+
+<li>F. Deloche, Fabrizio De Vico Fallani, Stéphanie Allassonniere. Innovation-based sparse estimation of functional connectivity from multivariate autoregressive models. <i>SPIE, Wavelets and Sparsity XVI</i>, 2015, San Diego, United States. <a target="_blank" href="https://dx.doi.org/10.1117/12.2189640">〈10.1117/12.2189640〉</a> <a target="_blank" href="https://hal.inria.fr/hal-01260223">〈hal-01260223〉</a>  </li>
 </ul>
 </p>
 
-<p>
-Thesis: <i>Short-time scale efficient coding of speech</i>  (<a href='http://www.theses.fr/2019EHES0142'>info on <i>theses.fr</i></a>) (<a href='/files/thesis.pdf'>pdf</a>).
+
+
+<h2>Thesis</h2>
+
+<p> <i>Short-time scale efficient coding of speech</i>  (<a href='http://www.theses.fr/2019EHES0142'>info on <i>theses.fr</i></a>) (<a href='/files/thesis.pdf'>pdf</a>).
 </p>
 
+<!-- 
 <h2>Others</h2>
 
 <p>
@@ -41,7 +61,7 @@ meeting of Association for Research in Otolaryngology (ARO), San José, USA, Feb
 <li> <i>The fine-grained statistical structure of speech may be
 congruent with nonlinear cochlear filtering</i>, <a href="https://www.isaar.eu/">ISAAR 2019</a>, Nyborg, Denmark, August 2019 </li>
 <li> <i>The efficient coding hypothesis for the peripheral auditory system.</i> - <a href="https://enseignements-2018.ehess.fr/2018/ue/2331/">Séminaire Neuromathématiques (EHESS)</a>, Collège de France, Paris, April 2019 <a href="/files/04-19-neuromath.pdf">[slides]</a></li>
-<!-- <li> <i> The statistical structure of speech - Does the cochlea perform an efficient coding for speech?</i> - GRETSI Summer school, Peyresq, July 2018 </li> -->
+ <li> <i> The statistical structure of speech - Does the cochlea perform an efficient coding for speech?</i> - GRETSI Summer school, Peyresq, July 2018 </li> 
 </ul>
 </p>
 
@@ -70,6 +90,7 @@ The fine-grained statistical structure of speech is congruent with nonlinear per
 
 </ul>
 
-</p>
+</p> -->
+
 </div>
 
