--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 ---
-layout: default
+layout: default 
+mainpage: true
 title: François Deloche - Personal page
 ---
 <div class="maindiv">
 
 <!--<p style="float:right; margin-left:10px"><img src="/Images/photo.jpg"></p>-->
-<h3>François Deloche - Personal page</h3>
 
-<p><i>About me:</i> I am a postdoctoral researcher and member of the <a href='https://www.waves.intec.ugent.be/hearing-technology'>Hearing Technology 
-Lab</a> at Ghent University. My research work is centered around computational modeling of the cochlea and the auditory periphery, with a current focus on transmission-line models. My (broad) research interests are in: computational neuroscience (study of sensory systems), computational models of
-the peripheral auditory system, non-linear cochlear signal processing, auditory neurophysiology (in particular: the auditory nerve compound action potential). I also conducted a research project on the modeling of speech rhythm perception using deep neural networks.
+    <div class="container">
+      <div class="image">
+        <img src="wordcloud.png">
+      </div>
+      <div class="mytext">
+<p><b>Hello,</b> <br>
+I am François Deloche, a postdoctoral researcher working on computational models of the cochlea and the auditory periphery.
+<br><br><br><br>
+<p style="color:#aa7c5aff" >← Some keywords for my research <span style="color:#aaaaaa">(done with <a href="https://www.wordclouds.com/">wordclouds.com</a>)</span></p>
 
-<br>
-<br>
-<i>Past me:</i> 
+     </div>
+</div>
 
-Between 2020 and 2022, I was a postdoctoral fellow in the <a href="https://engineering.purdue.edu/auditory/">Auditory Neurophysiology & Modeling Lab</a> at Purdue University. I completed my PhD in computational neuroscience in 2019, under the supervision of <a href="http://www.lps.ens.fr/~nadal/">Jean-Pierre Nadal</a> (<a href="http://cams.ehess.fr/">CAMS</a> - EHESS, Paris). I am a former student of the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">MVA master</a> (applied and computational mathematics program on statistics, machine learning and signal processing).
-</p>
 </div>
