new publication (HR tectoControl)

--- a/Publications.html
+++ b/Publications.html
@@ -7,14 +7,16 @@ title: François Deloche - CV
 
 <ul>
 
-<li>Pre-print: F. Deloche, L. Bonnasse-Gahot, J.Gervain. Acoustic characterization of speech rhythm: going
-beyond metrics with recurrent neural networks (2024). <a target="_blank" href="https://doi.org/10.48550/arXiv.2401.14416">〈arXiv:2401.14416〉</a> </li>
+<li> F. Deloche, M. Thienpont, A. Moleti, R. Sisto, S. Verhulst. Active control of transverse viscoelastic damping in the tectorial membrane: A second mechanism for traveling-wave amplification? <i>Hearing Research</i>. 2025<a target="_blank" href="https://doi.org/10.1016/j.heares.2025.109320">〈10.1016/j.heares.2025.109320〉</a>   (<a href='/files/TectoControl_postprint.pdf'>post-print</a>)</li>
+
+<li>Pre-print: F. Deloche, L. Bonnasse-Gahot, J. Gervain. Acoustic characterization of speech rhythm: going
+beyond metrics with recurrent neural networks. 2024<a target="_blank" href="https://doi.org/10.48550/arXiv.2401.14416">〈arXiv:2401.14416〉</a> </li>
  
-<li> F. Deloche, S. Parida, A. Sivaprakasam, M.G. Heinz. Estimation of cochlear frequency selectivity using a convolution model of forward-masked compound action potentials, 2024. <i>Journal of the Association for Research in Otolaryngology</i>.  <a target="_blank" href="https://doi.org/10.1007/s10162-023-00922-1">〈10.1007/s10162-023-00922-1〉</a>   (<a href='https://rdcu.be/dw2cj'>view-only</a>; <a href='/files/fmaskedCAP_postprint.pdf'>post-print</a>)
+<li> F. Deloche, S. Parida, A. Sivaprakasam, M.G. Heinz. Estimation of cochlear frequency selectivity using a convolution model of forward-masked compound action potentials. <i>Journal of the Association for Research in Otolaryngology</i>. 2024<a target="_blank" href="https://doi.org/10.1007/s10162-023-00922-1">〈10.1007/s10162-023-00922-1〉</a>   (<a href='https://rdcu.be/dw2cj'>view-only</a>; <a href='/files/fmaskedCAP_postprint.pdf'>post-print</a>)
 <!-- Pre-print (not peer-reviewed) available on bioarxiv: <a href='https://www.biorxiv.org/content/10.1101/2022.04.15.487700v1'>10.1101/2022.04.15.487700</a> -->
 </li>
 
-<li>F. Deloche. Fine-grained statistical structure of speech. <i>PLOS One</i>, 2020. <a target="_blank" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0230233">〈10.1371/journal.pone.0230233〉</a> <a target="_blank" href="https://hal.archives-ouvertes.fr/hal-01931420">〈hal-01931420〉</a>
+<li>F. Deloche. Fine-grained statistical structure of speech. <i>PLOS One</i>. 2020<a target="_blank" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0230233">〈10.1371/journal.pone.0230233〉</a> <a target="_blank" href="https://hal.archives-ouvertes.fr/hal-01931420">〈hal-01931420〉</a>
 <ul>
 <li> <small><a href='https://journals.plos.org/plosone/article/comment?id=10.1371/annotation/27e13960-0076-457d-a76d-581f3483b365'><i>Note on rendering issues for a few phonetic notations in the PlosOne version.</i></a></small>
 </li>
