--- a/tools.html
+++ b/tools.html
@@ -8,7 +8,7 @@ title: Tools
 Here are some tools that have been useful for research or personal projects:
 
 <ul>
-  <li> <a href="http://github.com/fdeloche/audacity-timit"> audacity-timit </a>  : An audacity scrip for displaying phonetic data of sentences of the TIMIT database  </li>
+  <li> <a href="http://github.com/fdeloche/audacity-timit"> audacity-timit </a>  : An audacity script for displaying phonetic data of sentences of the TIMIT database  </li>
     <li><a href="./qdirweigraph.html">QDirWeiGraph</a> : A Qt-based C++ program for the creation of directed weighted graphs.</li>
 </ul>
 <!--
